--- a/app/views/admin/songs/new.html.slim
+++ b/app/views/admin/songs/new.html.slim
@@ -57,7 +57,7 @@
 
         .mb-3
           = form.label :lyric, class: 'form-label'
-          = form.text_area :lyric, class: 'form-control'
+          = form.text_area :lyric, class: 'form-control', rows: 20
 
         div
           = form.submit 'Create Song', class: 'btn btn-primary'
