add release year

--- a/app/views/admin/albums/_album.html.slim
+++ b/app/views/admin/albums/_album.html.slim
@@ -6,3 +6,7 @@ div id="#{dom_id album}"
   div
     strong Artist:
     =< album.artist.name
+
+  p
+    strong Release Year:
+    =< album.release_year
