--- a/app/views/artists/show.html.slim
+++ b/app/views/artists/show.html.slim
@@ -18,6 +18,7 @@
             .card.mb-2
               .card-body
                 h3 = album.name
+                p = album.release_year
                 p
                   = link_to 'View album', album_path(album)
 
