--- a/app/views/albums/show.html.slim
+++ b/app/views/albums/show.html.slim
@@ -7,6 +7,8 @@
     main.col-md-9.col-lg-10
       h1
         = @album.name
+      p
+        = @album.release_year
 
       p
         = link_to @album.artist.name, artist_path(@album.artist)
