song's link to album

--- a/app/views/admin/songs/_song.html.slim
+++ b/app/views/admin/songs/_song.html.slim
@@ -12,6 +12,10 @@ div id="#{dom_id song}"
     =< song.genre.name
 
   p
+    strong Album:
+    =< song.album.name
+
+  p
     strong Link:
     =< song.link
 
