--- a/app/views/layouts/_navbar_for_viewer.html.slim
+++ b/app/views/layouts/_navbar_for_viewer.html.slim
@@ -10,6 +10,8 @@ nav.navbar.navbar-expand-lg[style='background-color: #e3f2fd;' data-bs-theme='li
         li.nav-item
           = link_to 'Artists', artists_path, class: 'nav-link'
         li.nav-item
+          = link_to 'Albums', albums_path, class: 'nav-link'
+        li.nav-item
           = link_to 'Genres', genres_path, class: 'nav-link'
         li.nav-item
           = link_to 'About', about_path, class: 'nav-link'
