--- a/app/views/albums/show.html.slim
+++ b/app/views/albums/show.html.slim
@@ -12,16 +12,16 @@
 
       p
         = link_to @album.artist.name, artist_path(@album.artist)
-    /  - @album.songs.each do |song|
-    /    .card.mb-2
-    /      .card-title
-    /        h3 = song.name
-    /      .card-body
-    /        p
-    /          = albums_list song.albums
-    /        p
-    /          = song.genre.name 
-    /        p
-    /          = link_to 'View lyrics', song_path(song)
+      - @songs.each do |song|
+        .card.mb-2
+          .card-title
+            h3 = song.name
+          .card-body
+            p
+              = artists_list song.artists
+            p
+              = song.genre.name 
+            p
+              = link_to 'View lyrics', song_path(song)
 
 == render 'layouts/footer'
