--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -14,7 +14,7 @@
             = link_to @song.genre.name, genre_path(@song.genre)
           p
             strong Album:
-            = link_to @song.album.name, album_path(@song.album)
+            = link_to @song.album.name, album_path(@song.album) if @song.album
           p
             strong Artists:
             = artists_list @song.artists
