Rewrite some controller (#31)
* fix songs controller

* rename about page controller for future

* fix empty album of song

* Home Page

--- a/app/views/layouts/_navbar_for_viewer.html.slim
+++ b/app/views/layouts/_navbar_for_viewer.html.slim
@@ -6,7 +6,7 @@ nav.navbar.navbar-expand-lg[style='background-color: #e3f2fd;' data-bs-theme='li
     #navbarColor03.collapse.navbar-collapse
       ul.navbar-nav.me-auto.mb-2.mb-lg-0
         li.nav-item
-          = link_to 'Home', root_path, class: 'nav-link active'
+          = link_to 'Songs', songs_path, class: 'nav-link active'
         li.nav-item
           = link_to 'Artists', artists_path, class: 'nav-link'
         li.nav-item
