--- a/app/views/songs/index.html.slim
+++ b/app/views/songs/index.html.slim
@@ -15,6 +15,8 @@
             p
               = song.genre.name 
             p
+              = song.album.name if song.album
+            p
               = song.tempo.to_s + ' BPM'
             p
               = link_to 'View lyrics', song_path(song)
