--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -21,6 +21,9 @@
           p
             iframe[style="border-radius:12px" src="#{@song.link}" width="100%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"]
           p
+            strong Views number: 
+            = @song.views_count
+          p
             strong Tempo:
             = @song.tempo.to_s + ' BPM'
 
