--- a/app/views/layouts/_navbar_for_viewer.html.slim
+++ b/app/views/layouts/_navbar_for_viewer.html.slim
@@ -17,4 +17,5 @@ nav.navbar.navbar-expand-lg[style='background-color: #e3f2fd;' data-bs-theme='li
           = link_to 'About', about_path, class: 'nav-link'
       = form_tag search_results_path, :method => :get, class: 'd-flex' do
         = text_field_tag :search, params[:search], class: 'form-control me-2'
+        = select_tag :target, options_for_select([ 'Song', 'Artist', 'Album', 'Genre' ], 'Song'), class: 'form-control me-2'
         = submit_tag "Search", :name => nil, class: 'btn btn-outline-primary'
