--- a/app/views/home/search_results.html.slim
+++ b/app/views/home/search_results.html.slim
@@ -6,11 +6,31 @@
   .row.mt-2.lyrics-site-content
     main.col-md-9.col-lg-10
       Search results
-      - @songs.each do |song|
-        p
-          strong = link_to song.name, song_path(song)
-        p = artists_list song.artists
-        p 
-          strong Views: 
-          = song.views_count
+      - if params[:target] == 'Song'
+        - @results.each do |song|
+          p
+            strong = link_to song.name, song_path(song)
+          p = artists_list song.artists
+          p 
+            strong Views: 
+            = song.views_count
+
+      - if params[:target] == 'Artist'
+        - @results.each do |artist|
+          p
+            strong = link_to artist.name, artist_path(artist)
+          p 
+            strong Biography: 
+            = artist.biography
+
+      - if params[:target] == 'Genre'
+        - @results.each do |genre|
+          p
+            strong = link_to genre.name, genre_path(genre)
+
+      - if params[:target] == 'Album'
+        - @results.each do |album|
+          p
+            strong = link_to album.name, album_path(album)
+
 == render 'layouts/footer'
