featured artist job

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -86,10 +86,9 @@
       .col-md-9
         h1 Incomming features
         ul
-          li Newest Song
-          li Newest Album
           li Lyrics ranking
           li Albums ranking
           li News
+          li Tours
       
 == render 'layouts/footer'
