--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,1 +1,43 @@
 @import "font-awesome";
+
+.lyrics-site-content {
+    min-height: 700px;
+  }
+  
+  .lyrics-site-sidenav-item {
+  
+    a,
+    button {
+      color: #fff;
+    }
+  }
+  
+  .layoutAuthentication {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  
+    .layoutAuthentication_content {
+      min-width: 0;
+      flex-grow: 1;
+    }
+  }
+  
+  .img-error {
+    max-width: 20rem;
+  }
+  
+  #layoutError {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+  
+  #layoutError #layoutError_content {
+    min-width: 0;
+    flex-grow: 1;
+  }
+  
+  #layoutError #layoutError_footer {
+    min-width: 0;
+  }
