--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,6 +8,6 @@ html
     = csp_meta_tag
     = favicon_link_tag('favicon.ico')
     = stylesheet_link_tag "application", "data-turbo-track": "reload"
-    = javascript_include_tag "application", "data-turbo-track": "reload", defer: true
+    = javascript_importmap_tags
   body class="#{yield (:body_class)}"
     = yield
