--- a/app/views/songs/show.html.slim
+++ b/app/views/songs/show.html.slim
@@ -26,13 +26,8 @@
           p
             strong Tempo:
             = @song.tempo.to_s + ' BPM'
-            #metronome-button
+            = tag.div id: 'metronome-button', data: {tempo: @song.tempo}
 
-            div[data-controller='metronome']
-              input[type="hidden" data-metronome-target="bpm" value="#{@song.tempo}"]
-              input[type="hidden" data-metronome-target="sound" value="#{audio_path('drumsticks.mp3')}"]
-              = button_tag '', type: 'button', data: { action: 'metronome#handleClick' }, class: 'btn btn-primary'
-                span[data-metronome-target='tempoButton'] Start metronome for the song
           div
             strong Lyric:
             =< simple_format(@song.lyric)
