--- a/app/views/admin/genres/edit.html.slim
+++ b/app/views/admin/genres/edit.html.slim
@@ -7,6 +7,7 @@
     main.col-md-9.col-lg-10.mt-2.mb-2
       h1 Editing genre
 
+      / = form_with model: [:admin, @genre], local: true do |form|
       = form_with scope: :genre, url: admin_genre_path(@genre), method: :patch do |form|
         - if @genre.errors.any?
           div.alert.alert-danger
