--- a/app/views/admin/genres/new.html.slim
+++ b/app/views/admin/genres/new.html.slim
@@ -7,20 +7,7 @@
     main.col-md-9.col-lg-10.mt-2.mb-2
       h1 New genre
 
-      = form_with scope: :genre, url: admin_genres_path do |form|
-        - if @genre.errors.any?
-          .alert.alert-danger
-            h2 = "#{pluralize(@genre.errors.count, "error")} prohibited this genre from being saved:"
-            ul
-              - @genre.errors.each do |error|
-                li = error.full_message
-
-        .mb-3
-          = form.label :name, class: 'form-label'
-          = form.text_field :name, class: 'form-control'
-
-        div
-          = form.submit 'Create Genre', class: 'btn btn-primary'
+      == render "form", genre: @genre
 
       br
 
