--- a/app/views/admin/genres/_form.html.slim
+++ b/app/views/admin/genres/_form.html.slim
@@ -11,4 +11,4 @@
     = form.text_field :name, class: 'form-control'
 
   div
-    = form.submit 'Create Genre', class: 'btn btn-primary'
+    = form.submit class: 'btn btn-primary'
