--- a/app/views/admin/albums/edit.html.slim
+++ b/app/views/admin/albums/edit.html.slim
@@ -1,38 +1,17 @@
-== render "layouts/navbar"
+== render 'layouts/navbar'
 
 .container-fluid
   .row.lyrics-site-content
-    == render "layouts/sidebar"
+    == render 'layouts/sidebar'
 
     main.col-md-9.col-lg-10.mt-2.mb-2
       h1 Editing album
 
-      = form_with scope: :album, url: admin_album_path(@album), method: :patch do |form|
-        - if @album.errors.any?
-          div.alert.alert-danger
-            h2 = "#{pluralize(@album.errors.count, "error")} prohibited this album from being saved:"
-            ul
-              - @album.errors.each do |error|
-                li = error.full_message
-
-        .mb-3
-          = form.label :name, class: 'form-label'
-          = form.text_field :name, class: 'form-control'
-
-        .mb-3
-          = form.label :artist_id, class: 'form-label'
-          = form.select :artist_id, Artist.all.collect {|artist| [ artist.name, artist.id ] }, {}, class: 'form-control'
-
-        .mb-3
-          = form.label :release_year, class: 'form-label'
-          = form.number_field :release_year, class: 'form-control'
-
-        div
-          = form.submit 'Save Album', class: 'btn btn-primary'
+      == render 'form', album: @album
 
       br
 
       div
-        = link_to "Back to albums", admin_albums_path, class: 'btn btn-secondary'
+        = link_to 'Back to albums', admin_albums_path, class: 'btn btn-secondary'
 
 == render 'layouts/footer'
