--- a/app/views/admin/genres/new.html.slim
+++ b/app/views/admin/genres/new.html.slim
@@ -1,30 +1,17 @@
-== render "layouts/navbar"
+== render 'layouts/navbar'
 
 .container-fluid
   .row.lyrics-site-content
-    == render "layouts/sidebar"
+    == render 'layouts/sidebar'
 
     main.col-md-9.col-lg-10.mt-2.mb-2
       h1 New genre
 
-      = form_with scope: :genre, url: admin_genres_path do |form|
-        - if @genre.errors.any?
-          .alert.alert-danger
-            h2 = "#{pluralize(@genre.errors.count, "error")} prohibited this genre from being saved:"
-            ul
-              - @genre.errors.each do |error|
-                li = error.full_message
-
-        .mb-3
-          = form.label :name, class: 'form-label'
-          = form.text_field :name, class: 'form-control'
-
-        div
-          = form.submit 'Create Genre', class: 'btn btn-primary'
+      == render 'form', genre: @genre
 
       br
 
       div
-        = link_to "Back to genres", admin_genres_path, class: 'btn btn-secondary'
+        = link_to 'Back to genres', admin_genres_path, class: 'btn btn-secondary'
 
 == render 'layouts/footer'
