--- a/app/views/admin/songs/_form.html.slim
+++ b/app/views/admin/songs/_form.html.slim
@@ -18,29 +18,11 @@
     = form.label :tempo, class: 'form-label'
     = form.number_field :tempo, class: 'form-control'
 
-  = form.fields_for :artists_songs_attributes do |artists_song|
-    / Main Artist.
+  = form.fields_for :artists_songs do |artists_song_form|
     .mb-3
-      = artists_song.label 'Main Artist', class: 'form-label'
-      = select_tag 'song[artists_songs_attributes][][artist_id]', options_from_collection_for_select(Artist.all, 'id', 'name'), class: 'form-control'
-      = hidden_field_tag 'song[artists_songs_attributes][][artist_type]', 'main'
-
-    div[data-controller='artists-songs']
-      = button_tag 'Add Featuring Artist', type: 'button', data: { action: 'artists-songs#addFeaturingArtist' }, class: 'btn btn-link mb-3'
-      div[data-artists-songs-target='featuringArtistsList']
-        .featuring-field-template[style="display: none;"]
-          / Feature Artist.
-          .mb-3[data-artists-songs-target='featuringArtist']
-            .row
-              .col-md-10.offset-md-1
-                = artists_song.label 'Featuring Artist', class: 'form-label'
-                = select_tag 'song[artists_songs_attributes][][artist_id]', options_from_collection_for_select(Artist.all, 'id', 'name'), class: 'form-control', disabled: true
-                = hidden_field_tag 'song[artists_songs_attributes][][artist_type]', 'featuring', disabled: true
-                = hidden_field_tag 'song[artists_songs_attributes][][_destroy]', '0', disabled: true
-
-              .col-md-1
-                = button_tag '', type: 'button', data: { action: 'artists-songs#removeFeaturingArtist' }, class: 'btn btn-danger' do
-                  span.bi.bi-x-square-fill
+      = artists_song_form.label 'Main Artist', class: 'form-label'
+      = artists_song_form.select :artist_id, Artist.all.collect {|artist| [ artist.name, artist.id ] }, {}, class: 'form-control'
+      = artists_song_form.select :artist_type, ['main','featuring'], {}, class: 'form-control'
 
   .mb-3
     = form.label :genre_id, class: 'form-label'
